--- a/03 - CSS Grid Fundamentals/css-grid-fundamentals-START.html
+++ b/03 - CSS Grid Fundamentals/css-grid-fundamentals-START.html
@@ -9,7 +9,28 @@
 </head>
 
 <body>
+  <div class="container">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
+    <div class="item">7</div>
+    <div class="item">8</div>
+    <div class="item">9</div>
+    <div class="item">10</div>
+  </div>
 
+  <style>
+    .container {
+      height:100vh;
+      display:grid;
+      grid-template-columns: 25% 50% 25%;
+      grid-template-rows:20% 50% 20% auto;
+      grid-gap:16px;
+    }
+  </style>
 </body>
 
 </html>
