--- a/07 - Sizing tracks in CSS Grid/sizing-tracks-START.html
+++ b/07 - Sizing tracks in CSS Grid/sizing-tracks-START.html
@@ -13,7 +13,7 @@
     <div class="item">1</div>
     <div class="item">2</div>
     <div class="item">3</div>
-    <div class="item">4</div>
+    <div class="item">this determines row size<br/>bc of auto</div>
     <div class="item">5</div>
     <div class="item">6</div>
     <div class="item">7</div>
@@ -30,7 +30,11 @@
   <style>
     .container {
       display: grid;
+      height:600px;
       grid-gap: 20px;
+      border:10px solid var(--black);
+      grid-template-columns: auto 2fr 1fr;
+      grid-template-rows:1fr 1fr 1fr 1fr;
     }
   </style>
 </body>
