--- a/19 - Nesting Grid with Album Layouts/albums-START.html
+++ b/19 - Nesting Grid with Album Layouts/albums-START.html
@@ -97,6 +97,33 @@
 
 
   <style>
+    .albums {
+      display:grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      grid-gap:16px;
+    }
+
+    .album {
+      background:rgba(255,255,255,.2);
+      box-shadow: 0 0 5px rgba(0,0,0,.1);
+      color:white;
+      font-weight:100;
+      letter-spacing: .05rem;
+      padding:16px;
+      display:grid;
+      grid-template-columns: 150px 1fr;
+      grid-gap: 10px;
+      align-items:center;
+    }
+
+    .album__artwork {
+      width:100%;
+    }
+
+    .album__desc {
+      font-weight:normal;
+      color:rgba(255,255,255,.75);
+    }
   </style>
 </body>
 
