--- a/14 - Grid Template Areas/area-line-names-START.html
+++ b/14 - Grid Template Areas/area-line-names-START.html
@@ -46,6 +46,14 @@
     .container {
       display: grid;
       grid-gap: 20px;
+      grid-template-areas:
+        "poop poop poop poop hamburger hamburger hamburger hamburger"
+        "poop poop poop poop hamburger hamburger hamburger hamburger"
+        "poop poop poop poop hamburger hamburger hamburger hamburger"
+        "poop poop poop poop hamburger hamburger hamburger hamburger"
+    }
+    .item3 {
+      grid-area: poop;
     }
   </style>
 </body>
