--- a/16 - grid-auto-flow dense Block Fitting/dense-START.html
+++ b/16 - grid-auto-flow dense Block Fitting/dense-START.html
@@ -86,6 +86,24 @@
     .container {
       display: grid;
       grid-gap: 20px;
+      grid-template-columns: repeat(10, 1fr);
+      grid-auto-flow: dense; /* with Dense, it fills in gaps/holes - here a hole is created by .item18 */
+    }
+    .item:nth-child(6n) {
+      background:cornflowerblue;
+      grid-column: span 6;
+    }
+    .item:nth-child(8n) {
+      background: black;
+      color:white;
+      grid-column: span 2;
+    }
+    .item:nth-child(9n) {
+      grid-row: span 2;
+    }
+    .item.item18 {
+      background: greenyellow;
+      grid-column-end: -1;
     }
   </style>
 </body>
