--- a/17 - CSS Grid Alignment + Centering/alignment-and-centering-START.html
+++ b/17 - CSS Grid Alignment + Centering/alignment-and-centering-START.html
@@ -71,6 +71,17 @@
       display: grid;
       grid-gap: 20px;
       grid-template-columns: repeat(10, 1fr);
+      grid-template-rows: repeat(5, 100px);
+      /* justify-items: center;
+      align-items:center; */
+      place-items: center center; /* align + justify */ 
+      /****** NOTES *******/
+      /* JUSTIFY = row    */
+      /* ALIGN   = column */
+    }
+    .itm {
+      background: rgba(255,255,255,.3);
+      padding:15px;
     }
   </style>
 </body>
