--- a/20 - CSS Grid Image Gallery/image-gallery-START.html
+++ b/20 - CSS Grid Image Gallery/image-gallery-START.html
@@ -45,13 +45,73 @@
       margin: 0 0 20px 0;
     }
 
-    .close {
-      background: none;
-      color: white;
-      border: 0;
+    .gallery {
+      display:grid;
+      grid-template-columns: repeat(auto-fill, 100px);
+      grid-auto-rows: 100px;
+      grid-auto-flow: dense;
     }
 
-    .gallery {}
+    .item {
+      overflow:hidden;
+
+      /* fix overlapping images */
+      display:grid;
+      grid-template-columns: 1;
+      grid-template-rows: 1;
+    }
+    .item img {
+      grid-column: 1 / -1;
+      grid-row: 1 / -1;
+      width:100%;
+      height:100%;
+      object-fit: cover;
+    }
+    .item__overlay {
+      background:#ffc60032;
+      grid-column: 1 / -1;
+      grid-row: 1 / -1;
+      position:relative;
+      display:grid;
+      justify-items: center;
+      align-items:center;
+
+      /* animate the overlay from off the bottom, to up center */
+      transform:translateY(100%);
+      transition:all 150ms ease-in-out;
+    }
+    .item__overlay button {
+      background:none;
+      border:2px solid white;
+      color:white;
+      text-transform:uppercase;
+      background:rgba(255,255,255,.2);
+      padding:5px;
+    }
+
+    .item:hover .item__overlay {
+      transform:translateY(0);
+    }
+
+
+    .item.v2 {
+      grid-row:span 2;
+    }
+    .item.v3 {
+      grid-row:span 3;
+    }
+    .item.v4 {
+      grid-row:span 4;
+    }
+    .item.h2 {
+      grid-column:span 2;
+    }
+    .item.h3 {
+      grid-column:span 3;
+    }
+    .item.h4 {
+      grid-column:span 4;
+    }
 
 
 
@@ -68,20 +128,87 @@
 
     .overlay.open {
       display: grid;
+      align-items:center;
+      justify-items:center;
     }
 
-    .overlay figure {
+    .overlay-inner {
       background: white;
       width: 700px;
       padding: 20px;
+      position:relative;
+    }
+    .close {
+      background: none;
+      color: black;
+      border: 0;
+      position:absolute;
+      top:0;
+      right:0;
+      font-size:18px;
     }
 
     .overlay img {
       width: 100%;
     }
+
+
+
+
+
+
+
+
   </style>
 
   <script>
+    const gallery = document.querySelector('.gallery');
+    const overlay = document.querySelector('.overlay');
+    const overlayImage = overlay.querySelector('img');
+    const overlayClose = overlay.querySelector('.close');
+
+    function generateHTML([h, v]) {
+      return `
+        <div class="item h${h} v${v}">
+          <img src="images/${randomNumber(12)}.jpg">
+          <div class="item__overlay">
+            <button>View ➞</button>
+          </div>
+        </div>
+      `;
+    }
+
+    function randomNumber(limit) {
+      return Math.floor(Math.random() * limit) + 1;
+    }
+
+    function handleClick(e) {
+      const src = e.currentTarget.querySelector('img').src;
+      //console.log(src);
+      overlayImage.src = src;
+      overlay.classList.add('open');
+    }
+
+    function close() {
+      overlay.classList.remove('open');
+    }
+
+    const digits = Array.from({ length: 50}, () => [randomNumber(4), randomNumber(4)]).concat([
+      [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], 
+      [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1], [1, 1]
+    ]);
+    // console.log(digits);
+
+    const html = digits.map(generateHTML).join('');
+    // console.log(html);
+    gallery.innerHTML = html;
+
+    const items = document.querySelectorAll('.item');
+
+    items.forEach(item => item.addEventListener('click', handleClick));
+
+    overlayClose.addEventListener('click', close);
+
   </script>
 </body>
 
